--- a/demos/dimensions/pom.xml
+++ b/demos/dimensions/pom.xml
@@ -14,7 +14,7 @@
     <!-- change this if you desire to use a different version of DataTorrent -->
     <datatorrent.version>2.0.0-SNAPSHOT</datatorrent.version>
     <datatorrent.apppackage.classpath>lib/*.jar</datatorrent.apppackage.classpath>
-    <skipTests>true</skipTests>
+    <skipTests>false</skipTests>
   </properties>
 
   <!-- repository to provide the DataTorrent artifacts -->
@@ -372,6 +372,12 @@
       <artifactId>junit</artifactId>
       <version>4.10</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-serde</artifactId>
+      <version>0.13.1</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 
