commit to test on cluster

--- a/benchmark/CustomSerde/pom.xml
+++ b/benchmark/CustomSerde/pom.xml
@@ -13,7 +13,7 @@
     <!-- change this if you desire to use a different version of DataTorrent -->
     <datatorrent.version>2.0.0-SNAPSHOT</datatorrent.version>
     <datatorrent.apppackage.classpath>lib/*.jar</datatorrent.apppackage.classpath>
-    <skipTests>true</skipTests>
+    <skipTests>false</skipTests>
   </properties>
   <dependencies>
     <dependency>
@@ -78,6 +78,12 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <version>2.5.0</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
       <type>jar</type>
     </dependency>
   </dependencies>
