--- a/demos/dimensions/pom.xml
+++ b/demos/dimensions/pom.xml
@@ -386,6 +386,12 @@
       <type>jar</type>
     </dependency>
     <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-exec</artifactId>
+      <version>0.13.1</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
       <groupId>malhar</groupId>
       <artifactId>CustomSerde</artifactId>
       <version>1.0-SNAPSHOT</version>
@@ -408,6 +414,11 @@
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-service</artifactId>
+      <version>0.13.1</version>
+    </dependency>
+     <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-shims</artifactId>
       <version>0.13.1</version>
     </dependency>
     <dependency>
