--- a/demos/dimensions/pom.xml
+++ b/demos/dimensions/pom.xml
@@ -391,23 +391,15 @@
       <version>0.13.1</version>
       <type>jar</type>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>malhar</groupId>
       <artifactId>CustomSerde</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>jar</type>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-shims</artifactId>
-      <version>0.13.1</version>
-      <type>jar</type>
-    </dependency>
-
-
-    <dependency>
-      <groupId>org.apache.hive</groupId>
-      <artifactId>hive-exec</artifactId>
       <version>0.13.1</version>
       <type>jar</type>
     </dependency>
@@ -415,11 +407,7 @@
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-service</artifactId>
       <version>0.13.1</version>
-    </dependency>
-     <dependency>
-      <groupId>org.apache.hive</groupId>
-      <artifactId>hive-shims</artifactId>
-      <version>0.13.1</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.thrift</groupId>
@@ -431,13 +419,17 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
       <version>0.9.0</version>
       <optional>true</optional>
     </dependency>
-
+   <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-core</artifactId>
+      <version>2.2.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
